--- a/codes/src/notebooks/data_mining_cleaning.ipynb
+++ b/codes/src/notebooks/data_mining_cleaning.ipynb
@@ -2,258 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "364fee50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from pandas_profiling import ProfileReport\n",
-    "import matplotlib.pyplot as plt    \n"
+    "# import pandas as pd\n",
+    "# from pandas_profiling import ProfileReport\n",
+    "# import matplotlib.pyplot as plt    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "dc305c07",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dice_job_title</th>\n",
-       "      <th>EMPLOYER</th>\n",
-       "      <th>JOB TITLE</th>\n",
-       "      <th>BASE SALARY</th>\n",
-       "      <th>LOCATION</th>\n",
-       "      <th>SUBMIT DATE</th>\n",
-       "      <th>START DATE</th>\n",
-       "      <th>Job_Title</th>\n",
-       "      <th>relatedSkills</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>VCA INC</td>\n",
-       "      <td>.NET APPLICATION DEVELOPER</td>\n",
-       "      <td>80,000</td>\n",
-       "      <td>SILVER SPRING, MD</td>\n",
-       "      <td>11/24/2014</td>\n",
-       "      <td>11/28/2014</td>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>Microsoft technologies;Software development;C#...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>OPTUM SERVICES INC</td>\n",
-       "      <td>.NET APPLICATION DEVELOPER</td>\n",
-       "      <td>83,158</td>\n",
-       "      <td>GOLDEN VALLEY, MN</td>\n",
-       "      <td>12/10/2014</td>\n",
-       "      <td>12/29/2014</td>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>Microsoft technologies;Software development;C#...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>LCG INC</td>\n",
-       "      <td>.NET APPLICATION DEVELOPER</td>\n",
-       "      <td>89,669</td>\n",
-       "      <td>ARLINGTON, VA</td>\n",
-       "      <td>12/30/2014</td>\n",
-       "      <td>01/12/2015</td>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>Microsoft technologies;Software development;C#...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>VCA INC</td>\n",
-       "      <td>.NET APPLICATION DEVELOPER</td>\n",
-       "      <td>80,000</td>\n",
-       "      <td>SILVER SPRING, MD</td>\n",
-       "      <td>11/24/2014</td>\n",
-       "      <td>11/28/2014</td>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>Microsoft technologies;Software development;C#...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>OPTUM SERVICES INC</td>\n",
-       "      <td>.NET APPLICATION DEVELOPER</td>\n",
-       "      <td>83,158</td>\n",
-       "      <td>GOLDEN VALLEY, MN</td>\n",
-       "      <td>12/10/2014</td>\n",
-       "      <td>12/29/2014</td>\n",
-       "      <td>.Net Application Developer</td>\n",
-       "      <td>Microsoft technologies;Software development;C#...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2495074</th>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>LG CNS AMERICA INC</td>\n",
-       "      <td>WEBMETHODS DEVELOPER</td>\n",
-       "      <td>106,960</td>\n",
-       "      <td>ENGLEWOOD CLIFFS, NJ</td>\n",
-       "      <td>10/05/2020</td>\n",
-       "      <td>10/20/2020</td>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>Web services;JDBC;Java;Quality assurance;webMe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2495075</th>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>GENERAL MILLS INC</td>\n",
-       "      <td>WEBMETHODS DEVELOPER</td>\n",
-       "      <td>115,500</td>\n",
-       "      <td>MINNEAPOLIS, MN</td>\n",
-       "      <td>09/15/2020</td>\n",
-       "      <td>10/05/2020</td>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>Web services;JDBC;Java;Quality assurance;webMe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2495076</th>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>SRINSOFT INC</td>\n",
-       "      <td>WEBMETHODS DEVELOPER</td>\n",
-       "      <td>130,000</td>\n",
-       "      <td>RICHMOND, VA</td>\n",
-       "      <td>07/02/2020</td>\n",
-       "      <td>07/27/2020</td>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>Web services;JDBC;Java;Quality assurance;webMe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2495077</th>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>SPARTAN SOLUTIONS INC</td>\n",
-       "      <td>WEBMETHODS DEVELOPER</td>\n",
-       "      <td>131,726</td>\n",
-       "      <td>SAN JOSE, CA</td>\n",
-       "      <td>06/01/2020</td>\n",
-       "      <td>06/11/2020</td>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>Web services;JDBC;Java;Quality assurance;webMe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2495078</th>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>SPARTAN SOLUTIONS INC</td>\n",
-       "      <td>WEBMETHODS DEVELOPER</td>\n",
-       "      <td>150,010</td>\n",
-       "      <td>LONG ISLAND CITY, NY</td>\n",
-       "      <td>10/19/2020</td>\n",
-       "      <td>10/29/2020</td>\n",
-       "      <td>webMethods Developer</td>\n",
-       "      <td>Web services;JDBC;Java;Quality assurance;webMe...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2495079 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Dice_job_title               EMPLOYER  \\\n",
-       "0        .Net Application Developer                VCA INC   \n",
-       "1        .Net Application Developer     OPTUM SERVICES INC   \n",
-       "2        .Net Application Developer                LCG INC   \n",
-       "3        .Net Application Developer                VCA INC   \n",
-       "4        .Net Application Developer     OPTUM SERVICES INC   \n",
-       "...                             ...                    ...   \n",
-       "2495074        webMethods Developer     LG CNS AMERICA INC   \n",
-       "2495075        webMethods Developer      GENERAL MILLS INC   \n",
-       "2495076        webMethods Developer           SRINSOFT INC   \n",
-       "2495077        webMethods Developer  SPARTAN SOLUTIONS INC   \n",
-       "2495078        webMethods Developer  SPARTAN SOLUTIONS INC   \n",
-       "\n",
-       "                          JOB TITLE BASE SALARY              LOCATION  \\\n",
-       "0        .NET APPLICATION DEVELOPER      80,000     SILVER SPRING, MD   \n",
-       "1        .NET APPLICATION DEVELOPER      83,158     GOLDEN VALLEY, MN   \n",
-       "2        .NET APPLICATION DEVELOPER      89,669         ARLINGTON, VA   \n",
-       "3        .NET APPLICATION DEVELOPER      80,000     SILVER SPRING, MD   \n",
-       "4        .NET APPLICATION DEVELOPER      83,158     GOLDEN VALLEY, MN   \n",
-       "...                             ...         ...                   ...   \n",
-       "2495074        WEBMETHODS DEVELOPER     106,960  ENGLEWOOD CLIFFS, NJ   \n",
-       "2495075        WEBMETHODS DEVELOPER     115,500       MINNEAPOLIS, MN   \n",
-       "2495076        WEBMETHODS DEVELOPER     130,000          RICHMOND, VA   \n",
-       "2495077        WEBMETHODS DEVELOPER     131,726          SAN JOSE, CA   \n",
-       "2495078        WEBMETHODS DEVELOPER     150,010  LONG ISLAND CITY, NY   \n",
-       "\n",
-       "        SUBMIT DATE  START DATE                   Job_Title  \\\n",
-       "0        11/24/2014  11/28/2014  .Net Application Developer   \n",
-       "1        12/10/2014  12/29/2014  .Net Application Developer   \n",
-       "2        12/30/2014  01/12/2015  .Net Application Developer   \n",
-       "3        11/24/2014  11/28/2014  .Net Application Developer   \n",
-       "4        12/10/2014  12/29/2014  .Net Application Developer   \n",
-       "...             ...         ...                         ...   \n",
-       "2495074  10/05/2020  10/20/2020        webMethods Developer   \n",
-       "2495075  09/15/2020  10/05/2020        webMethods Developer   \n",
-       "2495076  07/02/2020  07/27/2020        webMethods Developer   \n",
-       "2495077  06/01/2020  06/11/2020        webMethods Developer   \n",
-       "2495078  10/19/2020  10/29/2020        webMethods Developer   \n",
-       "\n",
-       "                                             relatedSkills  \n",
-       "0        Microsoft technologies;Software development;C#...  \n",
-       "1        Microsoft technologies;Software development;C#...  \n",
-       "2        Microsoft technologies;Software development;C#...  \n",
-       "3        Microsoft technologies;Software development;C#...  \n",
-       "4        Microsoft technologies;Software development;C#...  \n",
-       "...                                                    ...  \n",
-       "2495074  Web services;JDBC;Java;Quality assurance;webMe...  \n",
-       "2495075  Web services;JDBC;Java;Quality assurance;webMe...  \n",
-       "2495076  Web services;JDBC;Java;Quality assurance;webMe...  \n",
-       "2495077  Web services;JDBC;Java;Quality assurance;webMe...  \n",
-       "2495078  Web services;JDBC;Java;Quality assurance;webMe...  \n",
-       "\n",
-       "[2495079 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "h1b = pd.read_pickle(\"../data/hb1_2m_without_csharp.pkl\")\n",
-    "h1b"
+    "# h1b = pd.read_pickle(\"../data/hb1_2m_without_csharp.pkl\")\n",
+    "# h1b"
    ]
   },
   {
@@ -767,27 +536,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7078a8b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# h1b_co = h1b_clean[h1b_clean['state'] == 'CO']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "0a5d0299",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# h1b_clean.Dice_job_title.value_counts()[h1b_clean.Dice_job_title.unique()]\n",
-    "# h1b_co.Dice_job_title.unique()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "889b4319",
    "metadata": {},
@@ -796,51 +544,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "6c414d8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# h1b_co.groupby('Dice_job_title')['BASE SALARY'].agg(count='size', mean_sent='mean').reset_index().sort_values(by=['count'],ascending=False)['Dice_job_title'].head(10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "1d0bb6c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ax = h1b_co[h1b_co['Dice_job_title'].isin(['Systems Analyst','Research Associate','Lead Engineer',\n",
-    "#                                       'Project Manager','Developer','Business Analyst',\n",
-    "#                                           'Network Engineer','Java Developer','Computer Systems Analyst',\n",
-    "#                                           'Application Developer'])].boxplot(\n",
-    "#     rot=90, fontsize=15,\n",
-    "#     by  ='Dice_job_title', column=[\"BASE SALARY\"])\n",
-    "# title_boxplot = 'Box plot for top 10 jobs\\'s salary'  \n",
-    "# plt.title( title_boxplot )\n",
-    "# plt.suptitle('') # that's what you're after\n",
-    "# ax.set_xlabel(\"Jobs\");\n",
-    "# ax = plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b6bd3cbd",
    "metadata": {},
    "source": [
     "## the least title and states"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "a118d1f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(h1b_clean.groupby('Dice_job_title')['BASE SALARY'].agg(count='size', mean_sent='mean').reset_index().sort_values(by=['count'],ascending=True).head(10).Dice_job_title.to_latex())\n"
    ]
   },
   {
@@ -1648,124 +1356,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5769055e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3e42975",
-   "metadata": {},
-   "source": [
-    "### too many data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "817bbfef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# profile = ProfileReport(h1b_test, n_freq_table_max=250, title=\"Pandas Profiling Report\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7929d322",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# profile.to_widgets()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "6325cb5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# profile.to_file(\"h1b_unique_report.html\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3df0ba10",
-   "metadata": {},
-   "source": [
-    "## appriori"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "e598a28e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mlxtend.preprocessing import TransactionEncoder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "66da06b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tech_skill  = pd.read_csv('../Techand_Skills.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "40de0932",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tech_skill['skill_list'] = tech_skill.relatedSkills.str.split(';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "7be26fa8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = tech_skill.skill_list.dropna().tolist() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32276722",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "te = TransactionEncoder()\n",
-    "te_ary = te.fit(dataset).transform(dataset)\n",
-    "df = pd.DataFrame(te_ary, columns=te.columns_)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c60ca3a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mlxtend.frequent_patterns import fpmax\n",
-    "fpmax(df[1:10], min_support=0.4, use_colnames=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "45e2ffb0",
    "metadata": {},
@@ -1797,20 +1387,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75153697",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import scipy.cluster.hierarchy as shc\n",
-    "\n",
-    "# plt.figure(figsize=(10, 7))\n",
-    "# plt.title(\"Customer Dendograms\")\n",
-    "# dend = shc.dendrogram(shc.linkage(tech_skill.Job_Title, method='ward'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "abc17f90",
    "metadata": {},
    "outputs": [],
@@ -1834,86 +1410,6 @@
     "# Show the graph\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "802d2bdd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51dd78e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8745da3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03139285",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7b9c4b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a569ca8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0b9e04c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c33cde86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f09e45ed",
-   "metadata": {},
-   "source": [
-    "# knowledge graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "162cdfd0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
