--- a/tex_project/Part 4 Project Final Report/05_MiningTheUSTechnologistsData_Part4.tex
+++ b/tex_project/Part 4 Project Final Report/05_MiningTheUSTechnologistsData_Part4.tex
@@ -3,7 +3,6 @@
 %\usepackage{booktabs} % For formal tables
 
 
-
 % Copyright
 %\setcopyright{none}
 %\setcopyright{acmcopyright}
@@ -54,14 +53,14 @@
 
 		\begin{abstract}
 %		What interesting question(s) were you seeking to answer? What is a brief summary of your results?
-Several studies have reported the US wil face an even bigger tech talent shortages in the near future, which will translate into revenue decreases.  In this report, we will study the US technologist data through varies data mining techniques, by first introducing the US department of labour data along with H1b record (due to it's partially reflective and openness). We then introduce the technologist concept along with data scrapping technique we applied to abtained the dataset. After carefully processing the data with explorative analysis, we will try to understand the technologist trends such as: Which job title is becoming more popular and which one is not. The only machine learning algorithm for this project will be semi-unsupervised clustering, through which we will try to answer the utmost question of which tech skill set is becoming more demanding, and which can help our ultimate aim of recommending the right skill sets for the future tech job seekers. \\
-Our study shows that :  The report will ends with conclusion along with the future work that can be study along the way.
+Several studies have reported the US will face an even bigger tech talent shortages in the near future, which will translate into revenue decreases.  In this report, we will study the US technologist data through varies  mining techniques, by first introducing the US department of labor data along with H1b record (due to its partially reflective and openness). We then introduce the technologist concept along with data scrapping technique we applied to obtain the dataset. After carefully processing the data with exploratory analysis, we will try to understand the technologist trends such as: Which job title is becoming more popular and which one is not. The only machine learning algorithm for this project will be semi-unsupervised clustering, through which we will try to answer the utmost question of which tech skill set is becoming more demanding, and which can help our ultimate aim of recommending the right skill sets for the future tech job-seekers. \\
+Our study shows that on top of tech talent demand in US are on the rise, is cloud engineering and project management skills will be in huge demand, while SQL and system analysis are in decline. Java still grows strong as python has not yet replace its spot, and Software developers should not worry that data scientists will make their job obsolete, as least not yet.  The report will end with conclusion along  the future work that can be study along the way.
 	\end{abstract}
 	\maketitle
 
 	\input{projectbody-conf}
 	
-	\newpage
+	
 	\bibliographystyle{ACM-Reference-Format}
 	\nocite{*}
 	\bibliography{acmart} 
